# RustCrud

./: .env  Cargo.toml
migrations/2021-02-01-025814_createuser/: down.sql  up.sql
src/: Schema.rs  main.rs  models.rs
src/Beginner/: For me
