[package]
name = "rust1"
version = "0.1.0"
authors = ["ToXxXika <mabrouki552@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = {version ="1.4.5", features=["mysql"]}
diesel_codegen = {version ="0.16.1",features=["mysql"]}
dotenv = "0.15.0"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
